<resources>

    <!-- MANIFEST LABELS -->

    <string name="app_name">Collectify</string>
    <string name="title_activity_collection_details">Collection Details</string>


    <!-- NAVIGATION MENU -->
    <string name="navigation_collection">Collections</string>
    <string name="navigation_about">About</string>

    <!-- GENERAL -->

    <string name="general_network_error">There was a network error, try again later.</string>


    <!-- FRAGMENTS & ACTIVITIES -->


    <!-- COLLECTION DETAILS ACTIVITY -->

    <string name="details_activity_no_image_url">https://www.freeiconspng.com/uploads/no-image-icon-15.png</string>

    <!-- COLLECTION FRAGMENT -->

    <string name="collection_fragment_no_description">No description available. Please visit your Shopify admin page to configure one.</string>

    <!-- ABOUT FRAGMENT -->

    <string name="about_love_header">Made with ♥</string>
    <string name="about_description_body">A simple demonstration of recycler views and a basic bottom navigation template. Feel free to use as needed. Whilst loopj is not technically deprecated, it would be better to use another HTTP client if you are planning on making a production build. Moreover, the package structure is not ideal for very large projects! This project has minimal features to sort by, so this specific structure is easier for me here.</string>
    <string name="about_acknowledgements_header">Acknowledgements</string>
    <string name="about_acknowledgements_body_images">The robot icon used in the splash screen as well as the toolbar is made by Freepik from www.flaticon.com. All other images are parsed from or provided by Shopify.</string>
    <string name="about_acknowledgements_body_picasso">Images are loaded thanks to Square\'s Picasso library. No proguard values are configured for it here as this is not a production build</string>


    <!-- MISC -->

    <string name="misc_placeholder_title">Lorum Ipsum</string>


    <!-- IMAGE CONTENT DESCRIPTION -->

    <string name="content_desc_collection">An image of the collection</string>
    <string name="content_desc_product">An image of the product</string>
    <string name="content_desc_logo">A cute robot: the app\'s logo!</string>

</resources>
